--- a/includes/links.html
+++ b/includes/links.html
@@ -1,2 +1,2 @@
 <roundcube:include file="/includes/links.html" skinPath="skins/mabola" />
-<link rel="stylesheet" type="text/css" href="/blue.css" />
+<link rel="stylesheet" type="text/css" href="/dark.css" />
