--- a/dark.css
+++ b/dark.css
@@ -2268,3 +2268,10 @@ ul.toolbarmenu li span.filterlink {
     margin-left: -29px;
     padding-right: 16px;
     display: inline-block; }
+
+/**
+ * Login
+ */
+#login-form .box-inner {
+  background: #272822 url("images/logo_inverse.png") no-repeat scroll center 14px;
+  background-size: 100px; }
