--- a/dark.css
+++ b/dark.css
@@ -2275,3 +2275,6 @@ ul.toolbarmenu li span.filterlink {
 #login-form .box-inner {
   background: #272822 url("images/logo_inverse.png") no-repeat scroll center 14px;
   background-size: 100px; }
+
+#taskbar a.button-settings:before {
+  line-height: 2.4; }
